--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -240,13 +240,90 @@ body {
     border-radius: 2vw;
 }
 
+.espacoBtnDivida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5vw;
+}
+
+.btnAdicionarDivida{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    height: 3vw;
+    width: 15vw;
+    text-decoration: none;
+    text-align: center;
+    color: #10002b;
+    border-radius: 2vw;
+    background-color: #e9ecef;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    margin-bottom: 4vw;
+    gap: 1vw;
+}
+
+.btnAdicionarDivida:hover{
+    color: #ff6d00;
+}
+
+.btnAdicionarDivida:hover i{
+    color: #ff6d00;
+}
+
+.btnAdicionarDivida i{
+    font-size: 2vw;
+    color: #10002b;
+}
+
+.espacoBtnFixo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5vw;
+}
+
+.btnAdicionarFixo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    height: 3vw;
+    width: 15vw;
+    text-decoration: none;
+    text-align: center;
+    color: #10002b;
+    border-radius: 2vw;
+    background-color: #e9ecef;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    margin-bottom: 4vw;
+    gap: 1vw;
+}
+
+.btnAdicionarFixo:hover{
+    color: #ff6d00;
+}
+
+.btnAdicionarFixo:hover i{
+    color: #ff6d00;
+}
+
+.btnAdicionarFixo i{
+    font-size: 2vw;
+    color: #10002b;
+}
+
+
 .tituloFixo{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 2vw;
-    margin-top: 2vw;
+    margin-top: 6vw;
     font-size: 1.3vw;
 }
 
@@ -258,7 +335,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 3vw;
     width: 80%;
     height: 23vw;
     gap: 2vw;
