--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -33,7 +33,6 @@ body{
     align-items: center;
     height: 2vw;
     width: 5vw;
-    border: none;
     border-bottom: solid 2px black;
     font-size: 1vw;
     font-weight: bold;
@@ -46,11 +45,11 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 15vw;
-    height: 15vw;
-    border-radius: 1vw;
+    height: 17vw;
+    width: 40vw;
+    border-radius: .5vw; 
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    background-color: #fff;
+    background-color: #f8f9fa
 }
 
 .cima{
@@ -69,9 +68,10 @@ body{
     flex-direction: column;
     height: 90%;
     width: 90%;
-    gap: 1vw;
-    text-align: center;
-    font-size: 1vw;
+    gap: 4vw;
+    
+    text-align: center; 
+    font-size: 1.3vw;
 }
 
 .textoCima a{
@@ -103,20 +103,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2vw;
-    width: 4vw;
-    border: none;
-    border-radius: 2vw;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    height: 3vw;
+    width: 13vw;
+    border-radius: .5vw;
+    margin-bottom: 1vw;
+    font-size: 1.5vw;
+    font-weight: bold;
     cursor: pointer;
-}
-
-.btnNaoBaixo:hover{
-    color: green;
-}
-
-.btnSimBaixo:hover{
-    color: red;
 }
 
 .conteudo{
