--- a/STYLE/adicaoGastos.css
+++ b/STYLE/adicaoGastos.css
@@ -404,7 +404,7 @@ span{
    #overlay {
     display: none;
     position: fixed;
-    top: 0;
+    top: 50vw;
     left: 0;
     width: 100%;
     height: 100%;
