--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -28,9 +28,72 @@ body {
     margin-top: 2vw;
 }
 
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+}
+
+#confirmacao {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e9ecef;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    height: 14vw;
+    width: 40vw;
+    border-radius: .5vw;
+}
+
+.nomeConfirmacao{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  gap: 3vw;
+  font-size: 1.2vw;
+  color: #10002b;
+}
+
+.espacoConfirmacao{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  gap: 3vw;
+  font-size: 1.2vw;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3vw;
+  width: 13vw;
+  border-radius: .5vw;
+  margin-bottom: 1vw;
+  font-size: 1.5vw;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover{
+  border: solid 2px #ff6d00;
+}
+
 .tituloDividasPagas {
     margin-top: 20px;
 }
+
 .containerDividasPagas {
     display: flex;
     flex-wrap: wrap;
