--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -1034,6 +1034,10 @@ body {
     cursor: pointer;
 }
 
+.botaoDivida:hover{
+    color: #ff6d00;
+}
+
 .botaoExcluir{
     display: flex;
     justify-content: center;
@@ -1047,6 +1051,10 @@ body {
     cursor: pointer;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     gap: .5vw;
+}
+
+.botaoExcluir:hover{
+    color: #10002b;
 }
 
 .borrado {
